resetPostion bug squashed

--- a/index.css
+++ b/index.css
@@ -36,6 +36,7 @@ body{
 
 
 .viewport{
+ 
 	display: flex;
 	flex-wrap: nowrap;
 	overflow: hidden;
@@ -59,6 +60,20 @@ body{
 
 	align-items: center;
 	justify-content: center;
+}
+
+
+.grabbable {
+  cursor: move;
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+ /* (Optional) Apply a "closed-hand" cursor during drag operation. */
+ .grabbable:active {
+  cursor: grabbing;
+  cursor: -moz-grabbing;
+  cursor: -webkit-grabbing;
 }
 
 .card{
